CORE-7662: use a query parameter rather than a URI path element to distinguish permission listing from permission lookup by subject
