# golang/src/permissions/restapi/operations/permissions/by_subject_responses.go
@@ -1,4 +1,4 @@
-package permission_lookup
+package permissions
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
